# nd013-c3-localization-exercises

./: LICENSE.md  README.md  build.sh  run.sh  run_only_pcl_mac.sh  run_remote.sh  run_remote_pcl.sh
Markov/: README.md
Markov/lesson-1-initialize-priors-function/: CMakeLists.txt
Markov/lesson-1-initialize-priors-function/src/: main.cc
Markov/lesson-2-determine-probabilities/src/: main.cc
Markov/lesson-3-motion-model-probability/: CMakeLists.txt  README.md
Markov/lesson-3-motion-model-probability/src/: main.cc
Markov/lesson-4-coding-the-motion-model/: CMakeLists.txt  README.md
Markov/lesson-6-get-pseudo-ranges/: CMakeLists.txt
Markov/lesson-6-get-pseudo-ranges/src/: main.cc
Markov/lesson-8-coding-the-full-filter/: CMakeLists.txt  README.md
Scan Matching/: README.md
Scan Matching/ICP/: CMakeLists.txt  README.md
Scan Matching/ICP/solution/: icp1-main-solution.cpp
Scan Matching/ICP/src/: helper.cpp  helper.h  icp1-main.cpp
lesson-1-initialize-priors-function/: README.md
lesson-2-determine-probabilities/: README.md
lesson-2-determine-probabilities/src/: main.cc
lesson-3-motion-model-probability/: CMakeLists.txt
lesson-4-coding-the-motion-model/src/: main.cc
lesson-5-observation-model-probability/: CMakeLists.txt  README.md
lesson-5-observation-model-probability/src/: help_functions.h
lesson-6-get-pseudo-ranges/: README.md
lesson-6-get-pseudo-ranges/src/: helpers.h
lesson-7-coding-the-observation-model/: README.md
lesson-8-coding-the-full-filter/: CMakeLists.txt  README.md
lesson-8-coding-the-full-filter/src/: main.cc
(+3 files in other folders)
